<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:scrollbars="vertical"
    tools:context="com.dysen.test.MainActivity">

    <Button
        android:id="@+id/btn_start_authenticator"
        android:text="@string/jump_authenticator"
        android:layout_gravity="center"
        style="@style/common_btn_wra"/>
        <!--android:onClick="onJump"-->
    <Button
        android:id="@+id/btn_start_gesture"
        android:text="@string/jump_gesture"
        android:layout_gravity="center"
        style="@style/common_btn_wra"/>

    <Button
        android:id="@+id/btn_pop"
        android:text="@string/jump_pop"
        android:layout_gravity="center"
        style="@style/common_btn_wra"/>

    <Button
        android:id="@+id/btn_scan"
        android:text="@string/scan_qr"
        android:layout_gravity="center"
        style="@style/common_btn_wra"/>

    <Button
        android:id="@+id/btn_other"
        android:text="@string/other"
        android:layout_gravity="center"
        style="@style/common_btn_wra"/>
    <Button
        android:id="@+id/btn_contacts"
        android:text="@string/contacts"
        android:layout_gravity="center"
        style="@style/common_btn_wra"/>

    <ImageView
        android:id="@+id/iv_test"
        android:layout_gravity="center"
        style="@style/common_btn_wra"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@color/transparent"
        />




</LinearLayout>